hphp/hack/test/typecheck/parse_error_and_bad_fixme.php
<?hh

function foo() {
  /* HH_FIXME[] A malformed fixme comment */
  $x = 1;
}

function bar<T>() where T {}
